// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPropertyBuildingLink constructs the correct query 1`] = `
Object {
  "sql": "
      INSERT INTO property_building_links
      SET ?
   ",
  "values": Object {
    "link_type": "latlng",
    "property_id": 111,
    "vzd_building_id": 222,
  },
}
`;

exports[`findBuildingIdByLatLng constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id, ST_DISTANCE(bounds, POINT(?, ?)) as distance
      FROM buildings
      WHERE MBRIntersects(bounds, LineString(Point(?, ?), Point(?, ?)))
      ORDER BY distance ASC
      LIMIT 1
   ",
  "values": Array [
    56.123,
    24.222,
    56.122499999999995,
    24.221500000000002,
    56.1235,
    24.2225,
  ],
}
`;

exports[`findVzdBuildingIdByLatLng constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id, ST_DISTANCE(bounds, POINT(?, ?)) as distance
      FROM vzd_buildings
      WHERE MBRIntersects(bounds, LineString(Point(?, ?), Point(?, ?)))
      ORDER BY distance ASC
      LIMIT 1
   ",
  "values": Array [
    56.123,
    24.222,
    56.122499999999995,
    24.221500000000002,
    56.1235,
    24.2225,
  ],
}
`;

exports[`updatePropertyBuildingId constructs the correct query 1`] = `
Object {
  "sql": "
      UPDATE properties
      SET building_id = ?
      WHERE id = ?
   ",
  "values": Array [
    222,
    111,
  ],
}
`;
